fix: adjust header z-index

--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   background-color: #fff;
 }
